# zygisk-module-sample

./: .gitattributes  .gitignore  build.gradle  module.gradle  settings.gradle
.github/workflows/: build.yml
module/: build.gradle
module/src/main/: AndroidManifest.xml
module/src/main/cpp/: CMakeLists.txt  main.cpp  module.cpp  module.h
